# Scoala-UBB-Anul-1

./: .gitignore  Assignment06-08.zip.De7hLt  README.md
Assignment-01/: 01.py  07.py  15.py
Assignment-02/: complex.py  main.py
Assignment-03/: contestant.py  main.py  ranking.py  ui_wrappers.py
Assignment-03/cli/: __init__.py  arguments.py  command.py  engine.py
Assignment-03/output/: output_colors.py
Assignment-03/tests/: test_arguments.py  test_command.py  test_engine.py  test_ranking.py
Assignment-05/: main.py  services.py  student.py  ui.py
Assignment-05/tests/: test_services.py
Assignment06-08/: .gitignore  a_test.py  disciplines.pickle  disciplines.txt  errors.py  grades.pickle  grades.txt  gui.py  main.py  settings.properties  students.pickle  students.txt  temp.py  ui.py
Assignment06-08/controllers/: __init__.py  undo_controller.py
Assignment06-08/data_types/: __init__.py  dictionary.py
Assignment06-08/managers/: __init__.py  discipline_manager.py  file_grade_manager.py  grade_manager.py  pickle_grade_manager.py  student_manager.py
Assignment06-08/protocols/: __init__.py  storage.py
Assignment06-08/repositories/: __init__.py  file_repository.py  pickle_repository.py  repository.py
Assignment06-08/structures/: __init__.py  cascade_operation.py  discipline.py  function_call.py  grade.py  (+2 more)
Assignment10/: .gitignore  enums.py  game_data.py  main.py  pyproject.toml  service.py  ui.py
Assignment10/tests/: test_service.py
Assignment12/: main.py
math-project-1/: main.py
test-01/: main.py  phone.py  services.py  tests.py  ui.py
(+204 files in other folders)
