[tool.poetry]
name = "assignment10"
version = "0.1.0"
description = ""
authors = ["sweethuman <hackscomicon@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
console = "^0.98"
readchar = "^2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
mypy-extensions = "^0.4.3"
mypy-protobuf = "^1.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
